tests/blackhole/sfpi/gold/warn.txt
In file included from test.h:17,
                 from warn.cc:11:
../../../include/sfpi.h: In function 'void global()':
../../../include/sfpi.h:798:7: error: cannot write sfpu vector to memory
  798 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../include/sfpi.h: In function 'void pointeruse(sfpi::vFloat*)':
../../../include/sfpi.h:798:7: error: cannot write sfpu vector to memory
  798 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../../include/sfpi.h: In function 'void address()':
../../../include/sfpi.h:798:7: error: cannot write sfpu vector to memory
  798 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In function 'void unnit()':
cc1plus: warning: 'vec.sfpi::__vBase::v' is used uninitialized in this function [-Wuninitialized]
In function 'void argcall(sfpi::vFloat)':
cc1plus: error: invalid declaration for function 'argcall', sfpu types cannot be passed on the stack (missing sfpi_inline?)
../../../include/sfpi.h: In function 'sfpi::vFloat ret()':
../../../include/sfpi.h:798:7: error: cannot write sfpu vector to memory
  798 |     v = (initialized) ? __builtin_rvtt_sfpassign_lv(v, in) : in;
      |     ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
warn.cc: In function 'void setccnotinsidepushpop()':
warn.cc:76:33: error: malformed program, sfpsetcc_v outside of pushc/popc
   76 |     __builtin_rvtt_wh_sfpsetcc_v(a, 12);
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
In function 'void intinc()':
cc1plus: warning: 'x.sfpi::__vIntBase::<anonymous>.sfpi::__vBase::v' is used uninitialized in this function [-Wuninitialized]
In file included from ../../../include/sfpi.h:131,
                 from test.h:17,
                 from warn.cc:11:
../../../include/blackhole/sfpi_hw.h: In function 'void crash_mad_uninit()':
../../../include/blackhole/sfpi_hw.h:149:69: warning: '*((void*)& x +256)' is used uninitialized in this function [-Wuninitialized]
  149 | #define __builtin_rvtt_sfpadd(va, vb, mod1) __builtin_rvtt_wh_sfpadd(va, vb, mod1)
      |                                                                     ^
warn.cc:89:12: note: '*((void*)& x +256)' was declared here
   89 |     vFloat x, y;
      |            ^
cc1plus: warning: '*((void*)& b +256)' is used uninitialized in this function [-Wuninitialized]
cc1plus: warning: '*((void*)& x +256)' is used uninitialized in this function [-Wuninitialized]
In file included from ../../../include/sfpi.h:131,
                 from test.h:17,
                 from warn.cc:11:
../../../include/blackhole/sfpi_hw.h: In function 'void crash_int_add_fold_uninit()':
../../../include/blackhole/sfpi_hw.h:176:79: warning: 'x.sfpi::__vIntBase::<anonymous>.sfpi::__vBase::v' is used uninitialized in this function [-Wuninitialized]
  176 | #define __builtin_rvtt_sfpxiadd_v(dst, src, mod1) __builtin_rvtt_wh_sfpxiadd_v(dst, src, mod1)
      |                                                                               ^
warn.cc:96:10: note: 'x.sfpi::__vIntBase::<anonymous>.sfpi::__vBase::v' was declared here
   96 |     vInt x, y;
      |          ^
cc1plus: warning: '*((void*)& val +256)' is used uninitialized in this function [-Wuninitialized]
cc1plus: warning: 'x.sfpi::__vIntBase::<anonymous>.sfpi::__vBase::v' is used uninitialized in this function [-Wuninitialized]
In file included from ../../../include/sfpi.h:131,
                 from test.h:17,
                 from warn.cc:11:
../../../include/blackhole/sfpi_hw.h: In function 'void crash_cond_uninit()':
../../../include/blackhole/sfpi_hw.h:121:70: warning: '*((void*)& x +256)' is used uninitialized in this function [-Wuninitialized]
  121 | #define __builtin_rvtt_sfpxicmps(v, i, mod1) __builtin_rvtt_sfpxicmps((void *)ckernel::instrn_buffer, v, i, 0, 0, mod1)
      |                                                                      ^
warn.cc:106:10: note: '*((void*)& x +256)' was declared here
  106 |     vInt x;
      |          ^
cc1plus: warning: '*((void*)& x +256)' is used uninitialized in this function [-Wuninitialized]
Illegal rvtt builtin found in conditional tree: sfpxloadi
warn.cc:104: confused by earlier errors, bailing out
